index file change

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <title>Title</title>
     </head>
     <body>
-
+        <h1>hello world</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad aut commodi consectetur culpa doloribus eaque eos necessitatibus, numquam odit quia sint totam unde voluptatibus? Asperiores eveniet quibusdam rem rerum unde!</p>
+        <h2>This is header 2</h2>
     </body>
 </html>
