--- a/index.html
+++ b/index.html
@@ -2,11 +2,28 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Title</title>
+        <title>Layout 1 HTML Markup</title>
+        <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
     <body>
-        <h1>hello world</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad aut commodi consectetur culpa doloribus eaque eos necessitatibus, numquam odit quia sint totam unde voluptatibus? Asperiores eveniet quibusdam rem rerum unde!</p>
-        <h2>This is header 2</h2>
+        <div class="main">
+            <!--sidebar-->
+            <div class="sidebar">
+                <h2>Sidebar</h2>
+            </div>
+
+            <!--main content-->
+            <div class="main-content">
+                <div class="header">
+                    <h2>Header</h2>
+                </div>
+                <div class="content">
+                    <h2>Content</h2>
+                </div>
+                <div class="footer">
+                    <h2>Footer</h2>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
